# cerise

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.coq.local  README.md  _CoqProject  disable-qed.sh  file_categories.txt  flake.nix  lang.v  notes.md  opam  proofmode.md  word_count.py
Malloc/: malloc_spec.dvi  malloc_spec.fdb_latexmk  malloc_spec.fls  malloc_spec.tex
Notes/: Makefile  uninitialized.tex
capability-meetings-notes/: driver_code.v
dev/: cap_machine.addr_reg.html  cap_machine.cap_lang.html  cap_machine.class_instances.html  cap_machine.classes.html  cap_machine.examples.adder.html  cap_machine.examples.adder_adequacy.html  cap_machine.examples.addr_reg_sample.html  cap_machine.examples.arch_sealing.html  cap_machine.examples.assert.html  cap_machine.examples.buffer.html  cap_machine.examples.call.html  cap_machine.examples.callback.html  cap_machine.examples.contiguous.html  cap_machine.examples.counter.counter.html  cap_machine.examples.counter.counter_adequacy.html  cap_machine.examples.counter.html  cap_machine.examples.counter_adequacy.html  cap_machine.examples.counter_binary.counter_binary.html  cap_machine.examples.counter_binary.counter_binary_adequacy.html  cap_machine.examples.counter_binary.counter_binary_preamble.html  cap_machine.examples.counter_binary.counter_binary_preamble_def.html  cap_machine.examples.counter_binary.html  cap_machine.examples.counter_binary_preamble.html  cap_machine.examples.dynamic_sealing.html  (+145 more)
interpreter/src/: awkward.ml  awkward_dcaps.ml  awkward_ucaps.ml  compile.ml  dune  interactive.ml  interpreter.ml
(+2082 files in other folders)
