(executable
 (name        interpreter)
 (modules     interpreter)
 (libraries   libinterp))

(executable
 (name      interactive)
 (modules   interactive)
 (libraries libinterp notty notty.unix containers))

(executable
 (name      awkward_ucaps)
 (modules   awkward_ucaps)
 (libraries libinterp))

(executable
 (name      awkward_dcaps)
 (modules   awkward_dcaps)
 (libraries libinterp))
